plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.4'
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'lms'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '21'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
    implementation 'org.flywaydb:flyway-core'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    implementation 'org.springframework.boot:spring-boot-starter-web'

    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'

    implementation 'com.auth0:java-jwt:4.4.0'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'org.postgresql:postgresql'
    annotationProcessor 'org.projectlombok:lombok'
    implementation 'com.sun.mail:jakarta.mail:2.0.0'
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: '3.2.3'
    implementation 'org.apache.poi:poi-ooxml:5.2.3' // Используйте актуальную версию
    implementation group: 'com.amazonaws', name: 'aws-java-sdk', version: '1.12.701'
    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-aws', version: '2.2.6.RELEASE'
    implementation 'org.mapstruct:mapstruct:1.4.2.Final'
    implementation 'com.github.ozlerhakan:poiji:3.1.9'
}

tasks.named('test') {
    useJUnitPlatform()
}
